<resources>
    <string name="app_name">LiveVac</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Herd</string>
    <string name="title_notifications">Vaccines</string>
    <string name="lbl_next_vac">Next Vaccination</string>
    <string name="lbl_herd">Herd</string>
    <string name="lbl_livestock">Amount of livestocks</string>
    <string name="btn_add_herd">+</string>
    <string name="btn_add_livestock">Add Livestock</string>
    <string name="btn_add_vaccine">Add Vaccine</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="lbl_addlivestock">ADD A LIVESTOCK</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_breed">Breed</string>
    <string name="lbl_sex">Sex</string>
    <string name="lbl_dob">DOB</string>
    <string name="btn_vaccine_event">Vaccinate</string>
    <string name="lbl_herd_name">Type in a name for your herd</string>
    <string name="lbl_chosen_herd_placeholder">Herd Name</string>
    <string name="lbl_save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>