<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="?attr/fullscreenBackgroundColor"
android:theme="@style/ThemeOverlay.LiveVac.FullscreenContainer"
tools:context=".ui.herd.AddLivestockFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- The primary full-screen view. This can be replaced with whatever view
     is needed to present your content, e.g. VideoView, SurfaceView,
     TextureView, etc. -->

        <EditText
            android:id="@+id/spn_breed"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/spn_sex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_type" />

        <EditText
            android:id="@+id/spn_sex"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/dte_dob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_breed" />

        <TextView
            android:id="@+id/lbl_herdID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_herd"
            app:layout_constraintBottom_toTopOf="@+id/lbl_name"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_addlivestock"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/lbl_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_name"
            app:layout_constraintBottom_toTopOf="@+id/lbl_type"
            app:layout_constraintEnd_toStartOf="@+id/edx_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_herdID" />

        <TextView
            android:id="@+id/lbl_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_type"
            app:layout_constraintBottom_toTopOf="@+id/lbl_breed"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_name" />

        <TextView
            android:id="@+id/lbl_breed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_breed"
            app:layout_constraintBottom_toTopOf="@+id/lbl_sex"
            app:layout_constraintEnd_toStartOf="@+id/spn_breed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_type" />

        <TextView
            android:id="@+id/lbl_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_sex"
            app:layout_constraintBottom_toTopOf="@+id/lbl_dob"
            app:layout_constraintEnd_toStartOf="@+id/spn_sex"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_breed" />

        <TextView
            android:id="@+id/lbl_addlivestock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_addlivestock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_dob"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_sex" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/edx_herd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_herdID"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edx_name"
            android:layout_width="202dp"
            android:layout_height="45dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/spn_type"
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/spn_breed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edx_name" />

        <EditText
            android:id="@+id/dte_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="date"
            app:layout_constraintBaseline_toBaselineOf="@+id/lbl_dob"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btn_save_livestock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_livestock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_dob" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>